# agentcli-core

./: .gitignore  README.md  pyproject.toml
src/agentcli_core/: __init__.py  auth_bundle.py  cli_app.py  clipboard.py  cookies.py  errors.py  help.py  output.py  secrets.py  update.py
tests/: test_auth_bundle.py  test_cli_app.py  test_cookies.py  test_output.py  test_secrets.py
